...
                    // Get the actual items from the filtered list using the indexSet
                    let itemsToDelete = indexSet.map { filteredInventory[$0] }
                    // Call the modified removeItem method in the manager
                    inventoryManager.removeItems(itemsToDelete)
                }
            }
            .navigationTitle("Grocery Inventory")
            // Add searchable modifier
            .searchable(text: $searchText, prompt: "Search Groceries")
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    EditButton()
                }
...
