...
                        ToolbarItem(placement: .navigationBarLeading) {
                            Button("Cancel") {
                                dismiss()
                            }
                        }
                        ToolbarItem(placement: .navigationBarTrailing) {
                            Button("Add") {
                                viewModel.addItem()
                            }
                            .disabled(viewModel.isAddItemDisabled)
                            .overlay( // Show loading indicator on Add button
                                viewModel.isLoading ? ProgressView().padding(.leading, -20) : nil
                            )
...
